<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_heading"
                android:textColor="@color/blue_grey"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/rating_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:text="@string/summary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects_heading"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="24dp"
                android:textColor="@color/blue_grey"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_project_text_1"
                android:textStyle="bold"
                android:textColor="@color/blue_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:text="@string/second_project_text_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_grey"
                    android:textStyle="bold"
                    android:text="@string/libraries_heading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_grey"
                    android:text="@string/libraries" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_grey"
                    android:textStyle="bold"
                    android:text="@string/link_heading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_grey"
                    android:text="@string/link" />
            </LinearLayout>

            <TextView
                android:id="@+id/release_date_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="24dp"
                android:text="@string/experience_heading"
                android:textColor="@color/blue_grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/company" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:textStyle="bold"
                android:text="@string/time_frame_and_job_role" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:text="@string/first_experience_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:text="@string/second_experience_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:text="@string/third_experience_detail" />

        </LinearLayout>

    </ScrollView>
</layout>